--- a/src/components/Experience.css
+++ b/src/components/Experience.css
@@ -8,7 +8,7 @@
     width: 90%;
     max-width: 1300px;
     margin: auto;
-    padding: 130px 0;    
+    padding: 100px 0;    
 }
 
 .experience-title {
