--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -23,6 +23,7 @@
 
 .hero-container > h1 {
     text-transform: none;
+    text-align: center;
     color: #ffffff;
     font-size: 90px;
     margin-top: -100px;
